# st-haskell

./: .gitignore  README.md  ideas  makefile  st-haskell.cabal
doc/: formats.md  index.md
doc/tool/: archive.md  bubble.md  charcombine.md  charfullwidth.md  charreplace.md  compare.md  compress.md  concat.md  copy.md  count.md  crypt.md  detab.md  echo.md  entab.md  escape.md  examine.md  expand.md  getlines.md  glyphcount.md  import.md  linenumber.md  noop.md  overstrike.md  paginate.md  pslineprint.md  sentcount.md  tail.md  translit.md  unescape.md  wordcount.md  wye.md
src/STH/: Lib.hs
src/STH/Archive/: Main.hs
src/STH/Bubble/: Main.hs
src/STH/CharCombine/: Main.hs
src/STH/CharCount/: Main.hs
src/STH/CharEcho/: Main.hs
src/STH/CharFullwidth/: Main.hs
src/STH/CharReplace/: Main.hs
src/STH/Compare/: Main.hs
src/STH/Compress/: Main.hs
src/STH/Concat/: Main.hs
src/STH/Copy/: Main.hs
src/STH/Count/: Main.hs
src/STH/Crypt/: Main.hs
src/STH/DeTab/: Main.hs
src/STH/Echo/: Main.hs
src/STH/EnTab/: Main.hs
src/STH/Escape/: Main.hs
src/STH/Examine/: Main.hs
src/STH/Expand/: Main.hs
src/STH/GetLines/: Main.hs
src/STH/GlyphCount/: Main.hs
src/STH/Import/: Main.hs
src/STH/Lib/: Archive.hs  Bit.hs  Error.hs  IO.hs  Int.hs  List.hs  Maybe.hs  Parse.hs  Read.hs  RegExpr.hs  Text.hs  XOR.hs  ZipperList.hs
src/STH/Lib/Monad/: LinePrinter.hs
src/STH/Lib/Read/: CharSeq.hs  IntSet.hs
src/STH/Lib/Text/: Compose.hs  Esc.hs  Fullwidth.hs  Paginate.hs  RLE.hs
src/STH/Lib/Text/Format/: ASACarriageControl.hs  Delimited.hs  Line.hs  PostScript.hs
src/STH/LineCount/: Main.hs
src/STH/LineNumber/: Main.hs
src/STH/NoOp/: Main.hs
src/STH/Overstrike/: Main.hs
src/STH/PSLinePrint/: Main.hs
src/STH/Paginate/: Main.hs
src/STH/SentCount/: Main.hs
src/STH/Tail/: Main.hs
src/STH/Translit/: Main.hs
src/STH/UnEscape/: Main.hs
src/STH/WordCount/: Main.hs
src/STH/Wye/: Main.hs
src/SoftwareTools/: CharCount.hs  Copy.hs  FunctionLibrary.hs  Lib.hs  LineCount.hs  SentCount.hs  WordCount.hs
src/SoftwareTools/CharCombine/: Main.hs
src/SoftwareTools/CharCount/: Main.hs
src/SoftwareTools/CharEcho/: Main.hs
src/SoftwareTools/CharFullwidth/: Main.hs
src/SoftwareTools/Compress/: Main.hs
src/SoftwareTools/Copy/: Main.hs
src/SoftwareTools/DeTab/: Main.hs
src/SoftwareTools/Echo/: Main.hs
src/SoftwareTools/EnTab/: Main.hs
src/SoftwareTools/GlyphCount/: Main.hs
src/SoftwareTools/Lib/: Error.hs  IO.hs  List.hs  Maybe.hs  Read.hs  Text.hs
src/SoftwareTools/LineCount/: Main.hs
src/SoftwareTools/Overstrike/: Main.hs
src/SoftwareTools/SentCount/: Main.hs
src/SoftwareTools/UnEscape/: Main.hs
src/SoftwareTools/WordCount/: Main.hs
test/archive/: get.test  get2.test  list.test  put.test  put2.test  putput.test  remove.test  remove2.test
test/bubble/: empty.test  text.test
test/charcombine/: acute.test  empty.test  text.test
test/charcount/: empty.test  text.test  unicode.test
test/charecho/: count.test  empty.test  text.test
test/charfullwidth/: empty.test  text.test
test/charreplace/: empty.test  escape.test  mutliple-chars.test  not.test  range.test  remove.test  single-char.test
test/compare/: empty.test  text.test
test/compress/: empty.test  no-runs-no-sigils.test
test/concat/: files.test  repeat-stdin.test  repeat.test  stdin.test
test/copy/: chars.test  empty.test  text.test
test/count/: empty-char.test  empty.test  endnewline.test  text-char.test  text.test  unicode-char.test
test/crypt/: by-hand.test  decrypt.test  empty.test
test/detab/: default.test  empty.test  entab-inverse-with-args.test  entab-inverse.test  nonnumeric-arg-error.test  only-tabs.test  repeat-tabs.test  small-tabstop.test  tabstop-args.test  zero-tabstop-error.test
test/echo/: count.test  empty-char.test  empty.test  quoted-args.test  spaces-and-quotes.test  spaces.test  text-char.test  text.test
test/entab/: default.test  detab-inverse-with-args.test  detab-inverse.test  empty.test  nonnumeric-arg-error.test  only-spaces.test  repeat-tabs.test  small-tabstop.test  tabstop-args.test  zero-tabstop-error.test
test/escape/: echo-line.test  echo.test  empty.test
test/getlines/: asacc-error.test  asacc.test  empty.test  invert.test  mix.test  multiple-args.test  skip.test  sort-arg.test  text.test
test/glyphcount/: empty.test  text.test  unicode.test
test/import/: basic-temp.txt  basic.test  splice-multi-src1.txt  splice-multi-src2.txt  splice-multi-temp.txt  splice-multi.test  splice-src.txt  splice-temp.txt  splice.test
test/linecount/: endnewline.test  text.test
test/linenumber/: echo.test  from.test  pad.test
test/noop/: noop.test
test/overstrike/: echo-multi.test  echo-worstcase.test  echo.test  empty.test  too-many-backspaces.test
test/sentcount/: alice.test  empty.test  text.test
test/tail/: char.test  empty.test  lines.test
test/translit/: empty.test  escape.hs  range.test  remove.test  translit.test
test/unescape/: echo.test  empty.test  invalid.test  overstrike.test  text.test
test/wordcount/: empty.test  text.test
test/wye/: multi.test  text.test
