Name:           st-haskell
Version:        0.0
Cabal-Version:  >= 1.2
License:        AllRightsReserved
Author:         Nathan Bloomfield
Synopsis:       Haskell implementation of the utilities
                in Software Tools by Kernighan and Plauger
Build-Type:     Simple

Executable sth-copy
  main-is:        SoftwareTools/Copy/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charcount
  main-is:        SoftwareTools/CharCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-linecount
  main-is:        SoftwareTools/LineCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-glyphcount
  main-is:        SoftwareTools/GlyphCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-wordcount
  main-is:        SoftwareTools/WordCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-sentcount
  main-is:        SoftwareTools/SentCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-detab
  main-is:        SoftwareTools/DeTab/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charcombine
  main-is:        SoftwareTools/CharCombine/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charfullwidth
  main-is:        SoftwareTools/CharFullwidth/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-entab
  main-is:        SoftwareTools/EnTab/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-echo
  main-is:        SoftwareTools/Echo/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-overstrike
  main-is:        SoftwareTools/Overstrike/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-unescape
  main-is:        SoftwareTools/UnEscape/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charecho
  main-is:        SoftwareTools/CharEcho/Main.hs
  hs-source-dirs: src/
  build-depends:  base
