Name:           st-haskell
Version:        0.0
Cabal-Version:  >= 1.2
License:        AllRightsReserved
Author:         Nathan Bloomfield
Synopsis:       Haskell implementation of the utilities
                in Software Tools by Kernighan and Plauger
Build-Type:     Simple

Executable sth-noop
  main-is:        STH/NoOp/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-copy
  main-is:        STH/Copy/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-count
  main-is:        STH/Count/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-glyphcount
  main-is:        STH/GlyphCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-wordcount
  main-is:        STH/WordCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-sentcount
  main-is:        STH/SentCount/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-detab
  main-is:        STH/DeTab/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charcombine
  main-is:        STH/CharCombine/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charfullwidth
  main-is:        STH/CharFullwidth/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-entab
  main-is:        STH/EnTab/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-echo
  main-is:        STH/Echo/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-overstrike
  main-is:        STH/Overstrike/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-unescape
  main-is:        STH/UnEscape/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-compress
  main-is:        STH/Compress/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-expand
  main-is:        STH/Expand/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-crypt
  main-is:        STH/Crypt/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-translit
  main-is:        STH/Translit/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-charreplace
  main-is:        STH/CharReplace/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-escape
  main-is:        STH/Escape/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-tail
  main-is:        STH/Tail/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-getlines
  main-is:        STH/GetLines/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-compare
  main-is:        STH/Compare/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-import
  main-is:        STH/Import/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-concat
  main-is:        STH/Concat/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-wye
  main-is:        STH/Wye/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-pslineprint
  main-is:        STH/PSLinePrint/Main.hs
  hs-source-dirs: src/
  build-depends:  base

Executable sth-paginate
  main-is:        STH/Paginate/Main.hs
  hs-source-dirs: src/
  build-depends:  base
